--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     </div>
     <div class="col-sm-5">
       <div class="faq-card">
-        <p><strong>2. What is the timeline?</strong></p>
+        <p><strong>2. What are the timelines?</strong></p>
         <hr>
-        <p> registrations start on 25th Jan.</p>
+        <p> registrations start from 25th Jan till midnight of 26th Jan.</p>
       </div>
     </div>
     <div class="col-sm-1">
