--- a/html/apply.html
+++ b/html/apply.html
@@ -28,7 +28,8 @@
                 </div>
                 <div class='panel-collapse collapse' id='panel-1'>
                     <div class='panel-body'>
-                        <iframe src='https://forms.gle/MQxyvMvSshoc15Zq6' height="600" width="100%"></iframe>
+                        <a href="https://forms.gle/MQxyvMvSshoc15Zq6">Link to the form</a>
+<!--                         <iframe src='https://forms.gle/MQxyvMvSshoc15Zq6' height="600" width="100%"></iframe> -->
                     </div>
                 </div>
             </div>
