--- a/html/apply.html
+++ b/html/apply.html
@@ -15,21 +15,23 @@
 
 <body>
     <!--Accordians-->
-    <div class='container' style="font-family:'Times New Roman', Times, serif;">
+    <div class='container-fluid'>
 
-        <h1 style='margin-bottom:50px;'>Here are your steps to join the amazing journey:</h1>
+        <h1 style='margin-bottom:50px; font-weight: bolder;'>Here are your steps to join the amazing journey:</h1>
         <div class='panel-group' id='accordian'>
 
             <div class='panel panel-primary'>
                 <div class='panel-heading'>
                     <h3 class='panel-title' data-target='#panel-1' data-toggle='collapse' data-parent='accordian'>
-                        <b>Step 1.Fill the Form</b>
+                        <b>Step 1. Fill the Form</b>
                     </h3>
                 </div>
                 <div class='panel-collapse collapse' id='panel-1'>
                     <div class='panel-body'>
-                        Step 1 is to fill the form given below and after completeing please do join the whatsapp group given in the form after successful submission
-                        <a href="https://forms.gle/MQxyvMvSshoc15Zq6" target="_blank">Link to the form</a>
+                        <p>Step 1 is to fill the form given below and after completeing please do join the whatsapp group given in the form after successful submission</p>
+                        <div class="text-center">
+                            <a  class="btn btn-primary"  href="https://forms.gle/MQxyvMvSshoc15Zq6" target="_blank">Link to the form</a>
+                        </div>
 <!--                         <iframe src='https://forms.gle/MQxyvMvSshoc15Zq6' height="600" width="100%"></iframe> -->
                     </div>
                 </div>
@@ -38,7 +40,7 @@
             <div class='panel panel-primary'>
                 <div class='panel-heading'>
                     <h3 class='panel-title' data-target='#panel-2' data-toggle='collapse' data-parent='accordian'>
-                        <b>Step 2.Meet up</b>
+                        <b>Step 2. Meet up</b>
                     </h3>
                 </div>
                 <div class='panel-collapse collapse' id='panel-2'>
@@ -52,7 +54,7 @@
             <div class='panel panel-primary'>
                 <div class='panel-heading'>
                     <h3 class='panel-title' data-target='#panel-3' data-toggle='collapse' data-parent='accordian'>
-                        <b>Step 3.You are a Member</b>
+                        <b>Step 3. You are a Member</b>
                     </h3>
                 </div>
                 <div class='panel-collapse collapse' id='panel-3'>
@@ -64,11 +66,15 @@
 
         </div>
     </div>
-
+    <div class="container-fluid m-auto">
+        <h1>Contact Info:</h1>
+        <h4>Team &lt;Hack/&gt;</h4>
+        Mail to: <a href="mailto: thehackslashofficial@gmail.com">thehackslashofficial@gmail.com</a>
+        <h5>Contact Us: <b>+91-8275192440</b> [Yash Patni]</h5>
+    </div>
 
 
     <!--Accordians ending-->
-
 
     <script src="index.js"></script>
     <!-- jQuery library -->
