--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
     <div class="footer" style='margin-top:30px;'>
         <footer>
             <ul class="social">
-                <li><a href="#">
-                        <ion-icon name="logo-facebook"></ion-icon>
+                <li><a href="https://github.com/thehackslashofficial">
+                        <ion-icon name="logo-github"></ion-icon>
                     </a></li>
                 <li><a href="#">
                         <ion-icon name="logo-twitter"></ion-icon>
                     </a></li>
-                <li><a href="#">
+                <li><a href="https://instagram.com/hackslash_official?utm_medium=copy_link">
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a></li>
-                <li><a href="#">
+                <li><a href="https://www.linkedin.com/company/hackslashofficial">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a></li>
             </ul>
